# Agent-skills-POC

./: .env.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.agent/rules/: architecture.md  docs-culture.md  general.md
.agent/skills/architecture-decision-record/: README.md  SKILL.md
.agent/skills/docs-standard/: README.md  SKILL.md  docs-standard
.agent/skills/mermaid-diagrams/: README.md  SKILL.md
.agent/skills/mongodb/: SKILL.md  mongodb
.agent/skills/pydantic-ai/: SKILL.md  pydantic-ai
.agent/skills/python-async-patterns/: SKILL.md  python-async-patterns
.agent/skills/skill-creator/: README.md
.agent/skills/software-architecture/: software-architecture
.agent/skills/supabase/: supabase
.agent/skills/workflow-creator/: README.md  SKILL.md  workflow-creator
.agent/workflows/: commit.md
.agents/skills/ai-orchestration-patterns/: SKILL.md  ai-orchestration-patterns
.agents/skills/clean-architecture/: SKILL.md
.agents/skills/docling/: SKILL.md  docling
.agents/skills/software-architecture/: SKILL.md
.agents/workflows/: document-architecture.md  init-project.md
docs/: architecture.md  mcp-integration.md  plan-inicial.md  skills-design.md
docs/references/: anthropic-best-practices.md  custom-agent-with-skills.md
scripts/: context7_mcp_bridge.py
src/: bootstrap.py  settings.py
src/core/: policies.py
src/core/interfaces/: ports.py
src/services/: orchestrator.py
tests/infrastructure/: test_fs_skill_store.py  test_openai_client.py  test_subprocess_runner.py
workspace/: soul.md  tools.md
(+10 files in other folders)
